00-istio-bigbang-and-vs/vs-files/1-minio-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
  name: minio-https
  namespace: minio
spec:
  gateways:
  - istio-system/cafanwi-gateway
  hosts:
  - 'minio.s3gis.be'
  http:
  - retries:
      attempts: 3
      perTryTimeout: 2s
    match:
    - uri:
        prefix: / 
    route:
    - destination:
        host: minio-minio-instance-console
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
  name: minio-instance
  namespace: minio
spec:
  gateways:
  - istio-system/cafanwi-gateway
  hosts:
  - 'minio-instance.s3gis.be'
  http:
  - retries:
      attempts: 3
      perTryTimeout: 2s
    match:
    - uri:
        prefix: / 
    route:
    - destination:
        host: minio-minio-instance-hl
        port:
          number: 9000 #9090
