00-istio-bigbang-and-vs/vs-files/5-argowf.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
  name: argowf
  namespace: argo
spec:
  gateways:
  - istio-system/cafanwi-gateway
  hosts:
  - 'argoworkflow.s3gis.be'
  http:
  - retries:
      attempts: 3
      perTryTimeout: 2s
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argo-workflows-server
        port:
          number: 2746
